Reorganize diff creation
Added detectors for different types of changes